welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:7: error: '=' expected but ';' found.
  while (getX()!=getMondeLargeur()-1){
^